Add jarashi request words to keywords

--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,12 @@ subject: 'cat:cs.*'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
+        compound: 5
+        affinity: 5
+        ligand: 5
+        protein: 5
+        drug: 5
+        drug discovery: 10
 
 # 通知の閾値
 score_threshold: 0
