--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,7 +3,7 @@ name: Carrier Owl
 on:
   schedule:
     # github actions のデフォルトの time zone が UTC なので、日本時間 - 9時間 した値を書く
-    - cron:  '20  * * 1,2,3,4,5'
+    - cron:  '20 23 * * 1,2,3,4,5'
   workflow_dispatch:
   
   push:
