--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ keywords:
         molecule: 10
         compound: 10
         QSAR: 10
-        MI: 5
+        Materials informatics: 5
         NLP: 5
         AI: 5
            
