--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,10 @@ keywords:
         molecule: 10
         compound: 10
         QSAR: 10
+        Psi4: 10
+        MOPAC: 10
+        chemoinfomatics: 10
+        cheminfomatics: 10
         Materials informatics: 5
         NLP: 5
         AI: 5
